syntax = "proto3";
import "google/protobuf/timestamp.proto";

package fraud;

message PodInfo {
    string ip_address  = 1;
    string pod_name   = 2;
    string availability_zone   = 3;
    string grpc_host   = 4;
    string version     = 5;
}

message PodInfoRequest {
}

message PodInfoResponse {
    PodInfo podInfo = 1;
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN         = 0;
    SERVING         = 1;
    NOT_SERVING     = 2;
    SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
  }
  ServingStatus status = 1;
}

service Health {
    rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
    rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}

message Payment {
    string account_id  = 1;
    string card_number = 2;
    string card_type  = 3;
    string currency = 4;
    string mcc  = 5;
    double amount = 6;
    string status = 7;
    google.protobuf.Timestamp payment_at = 8;
    double tx_1d = 9;
    double avg_1d = 10;
    double tx_7d = 11;
    double avg_7d = 12;
    double tx_30d = 13;
    double avg_30d = 14;
    int32 time_btw_cc_tx = 15;
    double fraud = 16;
    string card_model  = 17;
    string terminal_name  = 18;
    int32 coord_x = 19;
    int32 coord_y = 20;
}

message PaymentRequest {
  Payment payment = 1;
}

message PaymentResponse {
  Payment payment = 1;
}

service FraudService  {
    rpc GetPodInfo(PodInfoRequest) returns (PodInfoResponse) {};
    rpc CheckPaymentFraud(PaymentRequest) returns (PaymentResponse) {};
}
